// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsForm matches snapshot before after submitting form 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <div>
    <h6
      className="MuiTypography-root-4 MuiTypography-subtitle2-23 AutoComplete-inputTitle-2"
    >
      Language / Country
    </h6>
    <div
      className="css-10nd86i"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3"
        >
          <div
            className="css-1492t68"
          >
            Language / Country
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-4-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6"
        >
          <div
            aria-hidden="true"
            className="css-fraxkc"
          >
            <span
              className="css-pujnn1"
            />
            <span
              className="css-gji98i"
            />
            <span
              className="css-1frpy8x"
            />
          </div>
          <span
            className="css-d8oujb"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="locale"
        type="hidden"
        value=""
      />
    </div>
  </div>
  <div>
    <h6
      className="MuiTypography-root-4 MuiTypography-subtitle2-23 AutoComplete-inputTitle-2"
    >
      Display Currency
    </h6>
    <div
      className="css-10nd86i"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3"
        >
          <div
            className="css-1492t68"
          >
            Display Currency
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-5-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6"
        >
          <div
            aria-hidden="true"
            className="css-fraxkc"
          >
            <span
              className="css-pujnn1"
            />
            <span
              className="css-gji98i"
            />
            <span
              className="css-1frpy8x"
            />
          </div>
          <span
            className="css-d8oujb"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="currency"
        type="hidden"
        value=""
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-65 MuiButtonBase-disabled-66 MuiButton-root-39 MuiButton-text-41 MuiButton-flat-44 MuiButton-sizeSmall-62 MuiButton-disabled-59"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="button"
  >
    <span
      className="MuiButton-label-40"
    >
      Reset - delete all my data
    </span>
  </button>
  <hr
    className="MuiDivider-root-68"
  />
  <div>
    <div
      className="SubmitButtonWithProgress-wrapper-73"
    >
      <button
        className="MuiButtonBase-root-65 MuiButtonBase-disabled-66 MuiButton-root-39 MuiButton-text-41 MuiButton-textSecondary-43 MuiButton-flat-44 MuiButton-flatSecondary-46 MuiButton-disabled-59"
        disabled={true}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="submit"
      >
        <span
          className="MuiButton-label-40"
        >
          Save
        </span>
      </button>
      <div
        className="MuiCircularProgress-root-82 MuiCircularProgress-colorPrimary-85 MuiCircularProgress-indeterminate-84 SubmitButtonWithProgress-buttonProgress-74"
        role="progressbar"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-87"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-88 MuiCircularProgress-circleIndeterminate-90"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</form>
`;

exports[`SettingsForm matches snapshot before submitting form 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <div>
    <h6
      className="MuiTypography-root-4 MuiTypography-subtitle2-23 AutoComplete-inputTitle-2"
    >
      Language / Country
    </h6>
    <div
      className="css-10nd86i"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3"
        >
          <div
            className="css-1492t68"
          >
            Language / Country
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-2-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6"
        >
          <div
            aria-hidden="true"
            className="css-fraxkc"
          >
            <span
              className="css-pujnn1"
            />
            <span
              className="css-gji98i"
            />
            <span
              className="css-1frpy8x"
            />
          </div>
          <span
            className="css-d8oujb"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="locale"
        type="hidden"
        value=""
      />
    </div>
  </div>
  <div>
    <h6
      className="MuiTypography-root-4 MuiTypography-subtitle2-23 AutoComplete-inputTitle-2"
    >
      Display Currency
    </h6>
    <div
      className="css-10nd86i"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3"
        >
          <div
            className="css-1492t68"
          >
            Display Currency
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-3-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6"
        >
          <div
            aria-hidden="true"
            className="css-fraxkc"
          >
            <span
              className="css-pujnn1"
            />
            <span
              className="css-gji98i"
            />
            <span
              className="css-1frpy8x"
            />
          </div>
          <span
            className="css-d8oujb"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="currency"
        type="hidden"
        value=""
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-65 MuiButton-root-39 MuiButton-text-41 MuiButton-flat-44 MuiButton-sizeSmall-62"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-40"
    >
      Reset - delete all my data
    </span>
    <span
      className="MuiTouchRipple-root-75"
    />
  </button>
  <hr
    className="MuiDivider-root-68"
  />
  <div>
    <div
      className="SubmitButtonWithProgress-wrapper-73"
    >
      <button
        className="MuiButtonBase-root-65 MuiButton-root-39 MuiButton-text-41 MuiButton-textSecondary-43 MuiButton-flat-44 MuiButton-flatSecondary-46"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-40"
        >
          Save
        </span>
        <span
          className="MuiTouchRipple-root-75"
        />
      </button>
    </div>
  </div>
</form>
`;
